dashboard and  set reminder comleted
