# swagger/v1/swagger.json
@@ -1175,6 +1175,9 @@
                     "date": {
                       "type": "string",
                       "format": "date"
+                    },
+                    "activity_id": {
+                      "type": "integer"
                     }
                   }
                 }
@@ -1329,9 +1332,6 @@
                     "date": {
                       "type": "string",
                       "format": "date"
-                    },
-                    "activity_id": {
-                      "type": "integer"
                     }
                   }
                 }
@@ -1461,6 +1461,9 @@
                     "date": {
                       "type": "string",
                       "format": "date"
+                    },
+                    "life_event_id": {
+                      "type": "integer"
                     }
                   }
                 }
@@ -1615,9 +1618,6 @@
                     "date": {
                       "type": "string",
                       "format": "date"
-                    },
-                    "event_id": {
-                      "type": "integer"
                     }
                   }
                 }
@@ -3593,6 +3593,287 @@
       },
       "delete": {
         "summary": "delete relative",
+        "security": [
+          {
+            "Bearer": {
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "successful"
+          }
+        }
+      }
+    },
+    "/{account_id}/api/contacts/{contact_id}/reminders?page={page}": {
+      "parameters": [
+        {
+          "name": "account_id",
+          "in": "path",
+          "type": "string",
+          "description": "account_id",
+          "required": true
+        },
+        {
+          "name": "contact_id",
+          "in": "path",
+          "type": "string",
+          "description": "contact_id",
+          "required": true
+        },
+        {
+          "name": "page",
+          "in": "path",
+          "type": "integer",
+          "description": "page",
+          "required": true
+        }
+      ],
+      "get": {
+        "summary": "list reminders",
+        "security": [
+          {
+            "Bearer": {
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "successful"
+          }
+        }
+      }
+    },
+    "/{account_id}/api/contacts/{contact_id}/reminders": {
+      "parameters": [
+        {
+          "name": "account_id",
+          "in": "path",
+          "type": "string",
+          "description": "account_id",
+          "required": true
+        },
+        {
+          "name": "contact_id",
+          "in": "path",
+          "type": "string",
+          "description": "contact_id",
+          "required": true
+        }
+      ],
+      "post": {
+        "summary": "create reminder",
+        "security": [
+          {
+            "Bearer": {
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "api_reminder",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "api_reminder": {
+                  "type": "object",
+                  "properties": {
+                    "title": {
+                      "type": "string"
+                    },
+                    "comments": {
+                      "type": "string"
+                    },
+                    "reminder_date": {
+                      "type": "string",
+                      "format": "date"
+                    },
+                    "reminder_type": {
+                      "type": "string",
+                      "example": [
+                        "once",
+                        "multiple"
+                      ]
+                    },
+                    "status": {
+                      "type": "string",
+                      "example": [
+                        "week",
+                        "month",
+                        "year"
+                      ]
+                    },
+                    "remind_after": {
+                      "type": "integer"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful"
+          }
+        }
+      }
+    },
+    "/{account_id}/api/contacts/{contact_id}/reminders/{id}/edit": {
+      "parameters": [
+        {
+          "name": "account_id",
+          "in": "path",
+          "type": "string",
+          "description": "account_id",
+          "required": true
+        },
+        {
+          "name": "contact_id",
+          "in": "path",
+          "type": "string",
+          "description": "contact_id",
+          "required": true
+        },
+        {
+          "name": "id",
+          "in": "path",
+          "type": "string",
+          "description": "id",
+          "required": true
+        }
+      ],
+      "get": {
+        "summary": "edit reminder",
+        "security": [
+          {
+            "Bearer": {
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "successful"
+          }
+        }
+      }
+    },
+    "/{account_id}/api/contacts/{contact_id}/reminders/{id}": {
+      "parameters": [
+        {
+          "name": "account_id",
+          "in": "path",
+          "type": "string",
+          "description": "account_id",
+          "required": true
+        },
+        {
+          "name": "contact_id",
+          "in": "path",
+          "type": "string",
+          "description": "contact_id",
+          "required": true
+        },
+        {
+          "name": "id",
+          "in": "path",
+          "type": "string",
+          "description": "id",
+          "required": true
+        }
+      ],
+      "patch": {
+        "summary": "update reminder",
+        "security": [
+          {
+            "Bearer": {
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "api_reminder",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "api_reminder": {
+                  "type": "object",
+                  "properties": {
+                    "title": {
+                      "type": "string"
+                    },
+                    "comments": {
+                      "type": "string"
+                    },
+                    "reminder_date": {
+                      "type": "string",
+                      "format": "date"
+                    },
+                    "reminder_type": {
+                      "type": "string",
+                      "example": [
+                        "once",
+                        "multiple"
+                      ]
+                    },
+                    "status": {
+                      "type": "string",
+                      "example": [
+                        "week",
+                        "month",
+                        "year"
+                      ]
+                    },
+                    "remind_after": {
+                      "type": "integer"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful"
+          }
+        }
+      },
+      "delete": {
+        "summary": "delete reminder",
         "security": [
           {
             "Bearer": {
